# pdf2epub

./: .gitignore  README.md  README_en.md  config.yaml  config.yaml.example  logging_config.py  monitor.py  pyproject.toml
.github/workflows/: pdf2epub.yaml  translate_epub.yaml
src/: breakdown.py  generate_epub.py  pdf_compressor.py  translate_epub.py
src/utils/: config_parser.py  html_utils.py  logging_config.py  monitor.py  network_utils.py
